[tool.poetry]
name = "pynuki"
version = "1.6.2"
description = "Python bindings for nuki.io bridges"
authors = ["Philipp Schmitt <philipp@schmitt.co>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/pschmitt/pynuki"
repository = "https://github.com/pschmitt/pynuki"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
requests = ">=2.27,<3"
pynacl = "^1.5.0"

[tool.poetry.dev-dependencies]
black = ">21.11b0"
flake8 = ">4.0.0,<6.0.0"
isort = ">5.8.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
